# Tools-for-vacancies

./: .gitignore  GUI_config.py  README.md  config.py  main.py  pyproject.toml
